k8s/services/matrix/app/synapse/httproute.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: synapse
spec:
  parentRefs:
    - name: eg-http-public
      namespace: core-eg
      sectionName: https
  hostnames:
    - matrix.lama-corp.space
  rules:
    - matches:
        - path:
            value: "/health"
        - path:
            value: "/_matrix"
        - path:
            value: "/_synapse"
      backendRefs:
        - name: synapse
          port: 8008
